--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~48.0.6",
     "expo-status-bar": "~1.4.4",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-safe-area-context": "^4.5.0",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/lodash": "^4.14.191",
     "@types/react": "~18.0.14",
     "typescript": "^4.9.4"
   },
