App.json and icon changes

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "yahtzee-react-app",
-    "slug": "yahtzee-react-app",
+    "name": "Yahtzee",
+    "slug": "rnyahtzee",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -9,7 +9,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#2089DC"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -20,8 +20,9 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
+        "backgroundColor": "#2089DC"
+      },
+      "package": "com.xramu.yahtzee-react-app"
     },
     "web": {
       "favicon": "./assets/favicon.png"
